--- a/GimRevitAddin/Docs/View/DocumentationView.xaml
+++ b/GimRevitAddin/Docs/View/DocumentationView.xaml
@@ -8,11 +8,57 @@
         <local:DocumentationViewModel/>
     </UserControl.DataContext>
     <Grid Margin="2">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="300" Width="1*"/>
+            <ColumnDefinition MinWidth="200" Width="1*"/>
             <ColumnDefinition MinWidth="300" Width="1*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="0" Margin="2">
+        <GroupBox Header="Optional Exports" 
+                  Grid.Row="0" Grid.Column="0" 
+                  Grid.ColumnSpan="2" Margin="2"
+                  HorizontalAlignment="Stretch" 
+                  VerticalAlignment="Stretch">
+            <StackPanel Orientation="Horizontal"
+                        VerticalAlignment="Stretch"
+                        HorizontalAlignment="Stretch">
+                <CheckBox Content="Export FL" Margin="2"
+                          IsChecked="{Binding ExportFbx}"/>
+                <CheckBox Content="Template: Some name" Margin="2"
+                          IsChecked="{Binding ViewModelProperty}"
+                          IsEnabled="False"/>
+            </StackPanel>
+        </GroupBox>
+        <GroupBox Header="Line Ending" 
+                  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                  HorizontalAlignment="Stretch" Margin="2"
+                  VerticalAlignment="Stretch">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MinWidth="50" Width="1*"/>
+                    <ColumnDefinition MinWidth="50" Width="1*"/>
+                    <ColumnDefinition MinWidth="50" Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <RadioButton Content="Windows (\r\n)" 
+                             GroupName="LineEnding"
+                             IsChecked="{Binding WindowLineEnding, 
+                                                 FallbackValue=true}"
+                             Grid.Column="0" Margin="2"/>
+                <RadioButton Content="Linux (\n)" 
+                             GroupName="LineEnding"
+                             IsChecked="{Binding LinuxLineEnding}"
+                             Grid.Column="1"
+                             Margin="2"/>
+                <RadioButton Content="Mac OS (\n)" 
+                             GroupName="LineEnding"
+                             IsChecked="{Binding MacOsLineEnding}"
+                             Grid.Column="2" Margin="2"/>
+            </Grid>
+        </GroupBox>
+        <StackPanel Grid.Row="2" Grid.Column="0" Margin="2">
             <RadioButton x:Name="rdbJson"
                          Content="Json" 
                          GroupName="Output"
@@ -29,33 +75,11 @@
                     <CheckBox Content="Format Json" 
                               IsChecked="{Binding FormatJson, FallbackValue=true}"
                               Margin="2"/>
-                    <GroupBox Header="Line Ending" 
-                              IsEnabled="{Binding ElementName=rdbJson, 
-                                                  Path=IsChecked}"
-                              Grid.Column="1"
-                              HorizontalAlignment="Stretch" 
-                              VerticalAlignment="Stretch">
-                        <StackPanel>
-                            <RadioButton Content="Windows (\r\n)" 
-                                         GroupName="LineEnding"
-                                         IsChecked="{Binding WindowLineEnding, 
-                                                             FallbackValue=true}"
-                                         Margin="2"/>
-                            <RadioButton Content="Linux (\n)" 
-                                         GroupName="LineEnding"
-                                         IsChecked="{Binding LinuxLineEnding}"
-                                         Margin="2"/>
-                            <RadioButton Content="Mac OS (\n)" 
-                                         GroupName="LineEnding"
-                                         IsChecked="{Binding MacOsLineEnding}"
-                                         Margin="2"/>
-                        </StackPanel>
-                    </GroupBox>
 
                 </Grid>
             </GroupBox>
         </StackPanel>
-        <StackPanel Grid.Column="1" Margin="2">
+        <StackPanel Grid.Column="1" Grid.Row="3" Margin="2">
             <RadioButton x:Name="rdbWeb"
                          Content="Web" GroupName="Output"
                          IsChecked="{Binding IsWeb}"/>
