--- a/GimRevitAddin/Docs/View/DocumentationView.xaml
+++ b/GimRevitAddin/Docs/View/DocumentationView.xaml
@@ -40,22 +40,17 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition MinWidth="50" Width="1*"/>
                     <ColumnDefinition MinWidth="50" Width="1*"/>
-                    <ColumnDefinition MinWidth="50" Width="1*"/>
                 </Grid.ColumnDefinitions>
                 <RadioButton Content="Windows (\r\n)" 
                              GroupName="LineEnding"
                              IsChecked="{Binding WindowLineEnding, 
                                                  FallbackValue=true}"
                              Grid.Column="0" Margin="2"/>
-                <RadioButton Content="Linux (\n)" 
+                <RadioButton Content="Mac / Linux (\n)" 
                              GroupName="LineEnding"
                              IsChecked="{Binding LinuxLineEnding}"
                              Grid.Column="1"
                              Margin="2"/>
-                <RadioButton Content="Mac OS (\n)" 
-                             GroupName="LineEnding"
-                             IsChecked="{Binding MacOsLineEnding}"
-                             Grid.Column="2" Margin="2"/>
             </Grid>
         </GroupBox>
         <StackPanel Grid.Row="2" Grid.Column="0" Margin="2">
